crates/cribo/tests/snapshots/execution_results@wrapper_type_alias_export.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_type_alias_export/main.py
---
ExecutionResults {
    status: Success,
    stdout: "PublicAlias\nwrapped_alias\nTrue\n['initialized']",
    stderr: "",
}
