crates/cribo/tests/snapshots/execution_results@wrapper_variadic_annotations.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_variadic_annotations/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\nargs: provider\nkwargs: ''\ncall: 3",
    stderr: "",
}
